# patent_analysis_agent_chinese_version

./: README.md  app.py  app_1.py  app_cn.py  app_en.py  main.py  paper_draft.data  patent_analysis.md  pyproject.toml  requirements.txt  review.md
research_agent/: 111.ipynb  patent_analysis_results.csv
research_agent/core/: applicant_analysis.py  combine_genealogies.py  config.py  embedding_model.py  gene_hyde.py  general_llm.py  generate_embedding.py  generate_hyde.py  generate_patent_chart.py  generate_patent_trend.py  generate_tech_genealogy.py  llm.py  llm_config.yaml  llm_config_example.yaml  markdown_display.py  mysql_utils.py  patent_tech_analysis.py  patent_tech_analysis_1.py  paths.py  propose_question.py  propose_suggestion.py  query.py  query_1.py  rerank_with_LLM.py  rerank_with_embedding.py  resolve_HYDE_via_PatentSearch.py  resolve_HYDE_via_WebSearch.py  storage.py  summary.py  survey.py  test.py  utils.py  web_search_bocha.py  web_search_zhipu.py  write_outline.py  writer.py
research_agent/core/prompts/: 0_generate_patent_trend_chart.jinja  1_generate_patent_trend_part.jinja  add_citations.jinja  answer_question.jinja  chunk_summary.jinja  combine_genealogies.jinja  combine_genealogies_backup.jinja  conclusion_writer.jinja  create_questions.jinja  create_questions_type_2.jinja  create_questions_type_3.jinja  create_questions_type_4.jinja  find_statement_citation.jinja  find_statements.jinja  gene_statement_hyde.jinja  (+31 more)
research_agent/scripts/: patent_analysis.md  受理人分析_V1.ipynb  基于deepseek的专利分析报告自动生成.ipynb  基于deepseek的专利分析模块撰写.ipynb  绘制带图的分析报告.ipynb
(+88 files in other folders)
