[tool.poetry]
name = "summary-generation-match"
version = "0.1.0"
description = ""
authors = ["zhanlin-liu <zhanlin@prorata.ai>"]
readme = "README.md"

packages = [
    { include = "research_agent"},
]


[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.5"
python-dotenv = "^1.0.1"
litellm = "^1.57.4"
pydantic = "^2.1.1"
json-repair = "^0.35.0"
pyaml-env = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
